--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,116 @@
+aiofiles==23.1.0
+aiogram==3.0.0
+aiohttp==3.9.1
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
 aniso8601==9.0.1
+annotated-types==0.5.0
+anyio==4.0.0
+async-timeout==4.0.3
+atomicwrites==1.4.1
+attrs==23.1.0
+autopep8==1.5.4
+Babel==2.13.1
 bcrypt==4.0.1
+bidict==0.21.4
 blinker==1.7.0
-blurhash-python==1.1.3
+blurhash==1.1.4
 boto3==1.28.80
 botocore==1.31.85
-certifi==2023.7.22
+certifi==2023.11.17
 cffi==1.16.0
+chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-dnspython==2.4.2
+cryptography==41.0.5
+dnspython==1.16.0
+docxcompose==1.4.0
+docxtpl==0.16.0
 et-xmlfile==1.1.0
+exceptiongroup==1.1.3
 Flask==3.0.0
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.3
 Flask-RESTful==0.3.10
+Flask-SocketIO==5.3.6
+frozenlist==1.4.0
+gevent==21.12.0
+gevent-websocket==0.10.1
+greenlet==1.1.2
 gunicorn==21.2.0
+h11==0.14.0
+html2text==2020.1.16
+httpcore==0.17.3
+httpx==0.24.1
 idna==3.4
 importlib-metadata==6.8.0
+iniconfig==1.1.1
 itsdangerous==2.1.2
 jdcal==1.4.1
 Jinja2==3.1.2
 jmespath==1.0.1
+lxml==4.9.3
+magic-filter==1.0.11
+Markdown==3.5.1
 MarkupSafe==2.1.3
-marshmallow==3.20.1
+marshmallow==3.20.2
+marshmallow-oneofschema==3.0.1
+multidict==6.0.4
+mysql-connector-python==8.0.27
+numpy==1.24.4
+opencv-python==4.8.1.78
 openpyxl==2.6.2
 packaging==23.2
 payu-sdk==1.2.0
-Pillow==9.4.0
+Pillow==8.3.2
+pluggy==0.13.1
+protobuf==3.19.1
+py==1.9.0
+pycodestyle==2.6.0
 pycparser==2.21
-pycryptodome==3.16.0
+pycryptodome==3.19.0
+pydantic==2.3.0
+pydantic_core==2.6.3
 PyJWT==2.8.0
-pymongo==4.6.1
+pymdown-extensions==10.5
+pymongo==3.7.2
+pyparsing==2.4.7
 PyPDF2==2.0.0
+pytest==6.1.1
 python-dateutil==2.8.2
+python-docx==1.1.0
+python-dotenv==1.0.0
+python-engineio==4.8.0
 python-http-client==3.3.7
 python-slugify==3.0.2
+python-socketio==5.10.0
+python-telegram-bot==20.5
 pytz==2023.3.post1
+PyYAML==6.0.1
+qrcode==6.1
 razorpay==1.3.0
+redis==3.5.3
+reportlab==3.6.10
 requests==2.31.0
 s3transfer==0.7.0
 sendgrid==6.1.0
+simple-websocket==1.0.0
 six==1.16.0
+slugify==0.0.1
+sniffio==1.3.0
+starkbank-ecdsa==2.2.0
 text-unidecode==1.2
+toml==0.10.1
+twilio==8.10.3
 typing_extensions==4.8.0
 urllib3==1.26.18
 Werkzeug==3.0.1
+wsproto==1.2.0
 xlrd==1.2.0
 xmltodict==0.13.0
+yarl==1.9.3
 zipp==3.17.0
+zope.event==4.5.0
+zope.interface==5.4.0
