--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
           ls &&
-          cd Flask-Deployment/ &&
+          cd techempight/ &&
           ls &&
           git pull &&
           sudo systemctl stop techapi &&
