--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
           ls &&
-          cd techempight/ &&
+          cd techapi/ &&
           ls &&
           git pull &&
-          sudo systemctl stop techapi &&
+          sudo systemctl stop techempight &&
           sudo systemctl daemon-reload &&
-          sudo systemctl start techapi" 
+          sudo systemctl start techempight" 
 
